--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-file-earmark"></i></div>
                         <h2 class="h4 fw-bolder">File allocation</h2>
                         <p>The allocation technique outlines how files are stored within the disk blocks. The direct access characteristic of disks provides us with the versatility to manage files. Often, multiple different files are stored on the same disk.</p>
-                        <a class="text-decoration-none" href="#!">
+                        <a class="text-decoration-none" href="file_allocation/fileallocation.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
