--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                     <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-arrow-repeat"></i></div>
-                        <h2 class="h4 fw-bolder">Process Synchronisation</h2>
+                        <h2 class="h4 fw-bolder">Process Synchronization</h2>
                         <p>The Producer-Consumer Problem, also referred to as the bounded buffer problem, is a classic example of synchronization issues. It involves a buffer with N slots, each capable of holding a single unit of data. Two processes, namely the Producer and the Consumer, are concurrently operating within this buffer.</p>
                         <a class="text-decoration-none" href="#!">
                             Check it out
@@ -145,6 +145,17 @@
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
+
+                     <div class="col-lg-4">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-cpu"></i></div>
+                        <h2 class="h4 fw-bolder">Interprocess Communication</h2>
+                        <p>Interprocess communication allows processes to share data with each other and synchronize their operations, and is a fundamental feature of any operating system.</p>
+                        <a class="text-decoration-none" href="SharedMemIPC/sharedmemipc.html">
+                            Check it out
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                    
                 </div>
             </div>
         </section>
