Added index.html path to home tab

--- a/SharedMemIPC/sharedmemipc.html
+++ b/SharedMemIPC/sharedmemipc.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">About</a>
@@ -64,12 +64,12 @@
 
     <div class="container">
       <h1 class="text-center mb-5">Inter-Process Communication through Shared Memory</h1>
-        <p>Inter-Process Communication (IPC) allows co-operating processes to share data and synchronize their operations. There are two major ways to
+        <p> Inter-process communication (IPC) allows cooperating processes to share data and synchronize their operations. There are two major ways to
             implement IPC.  They are Shared Memory and Message Passing.
         <br>
         <br>
             In IPC through Shared Memory, a memory segment is shared by many processes for communication. This shared memory segment is attached to the 
-            address space of the processes, who want to communicate using it.  Here, we have simulated two process writing to (the writer) and reading
+            address space of the processes, and who wants to communicate using it.  Here, we have simulated two processes writing to (the writer) and reading
             from (the reader) the shared memory segment.
         </p>
         <br>
