--- a/SharedMemIPC/BoundedBufferIPC.html
+++ b/SharedMemIPC/BoundedBufferIPC.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">About</a>
