Added path to about and home

--- a/SharedMemIPC/BoundedBufferIPC.html
+++ b/SharedMemIPC/BoundedBufferIPC.html
@@ -53,7 +53,7 @@
               <a class="nav-link active" aria-current="page" href="sharedmemipc.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="../about/about.html">About</a>
+              <a class="nav-link active" href='../about/about.html'>About</a>
             </li>
           </ul>
         </div>
