--- a/SharedMemIPC/BoundedBufferIPC.html
+++ b/SharedMemIPC/BoundedBufferIPC.html
@@ -50,10 +50,10 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="sharedmemipc.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="SharedMemIPC/sharedmemipc.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href='../about/about.html'>About</a>
+              <a class="nav-link active" onclick="location.href = '../about/about.html';" href="#">About</a>
             </li>
           </ul>
         </div>
