Added home path

--- a/SharedMemIPC/BoundedBufferIPC.html
+++ b/SharedMemIPC/BoundedBufferIPC.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" onclick="location.href = '../SharedMemIPC/sharedmemipc.html';" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="sharedmemipc.html">Home</a>
             <li class="nav-item">
               <a class="nav-link active" onclick="location.href = '../about/about.html';" href="#">About</a>
             </li>
