--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-stopwatch"></i></div>
                         <h2 class="h4 fw-bolder">Process Scheduling</h2>
                         <p>Process scheduling is a function of the process manager that involves displacing a running process from the CPU and choosing another process to run, based on a specific strategy. This scheduling is a crucial component of a multiprogramming operating system.</p>
-                        <a class="text-decoration-none" href="#!">
+                        <a class="text-decoration-none" href="CPU-scheduling/scheduling.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
