--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-cpu"></i></div>
                         <h2 class="h4 fw-bolder">System calls</h2>
                         <p>System calls are the interface between the user applications and the operating system. They provide a way for programs to request services from the operating system such as file management, process control, and interprocess communication.</p>
-                        <a class="text-decoration-none" href="#!">
+                        <a class="text-decoration-none" href="./system_calls/syscall.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
