--- a/CPU-scheduling/LJF/ljf.html
+++ b/CPU-scheduling/LJF/ljf.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="priority.css">
+    <link rel="stylesheet" href="ljf.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priority</title>
+    <title>Longest Job First</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="fcfs.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="priority.js"></script>
+    <script src="ljf.js"></script>
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html"><strong>OS Simulator</strong></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarNav">
-      <ul class="navbar-nav ms-auto me-4">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../scheduling.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">About</a>
-        </li>
-      </ul>
+  <nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><strong>OS Simulator</strong></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav ms-auto me-4">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../scheduling.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">About</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
     <div class="container">
         <h1 style="padding:40px;">
-          PRIORITY SCHEDULING
+          LONGEST JOB FIRST
         </h1>
         <div>
           <table id="ep" class="table table-bordered table-striped" style="width:70%" align="center">
@@ -43,7 +43,6 @@
               <th>PNO.</th>
               <th>Arrival Time </th>
               <th>Burst Time </th>
-              <th>Priority</th>
               </tr>
             <tbody id="ept">
             </tbody>
@@ -58,11 +57,6 @@
             <div class="form-group">
               <input type='number' class="form-control " id='bt1' placeholder="burst time"></input>
             </div>
-
-            <div class="form-group">
-                <input type='number' class="form-control " id='priority' placeholder="Priority"></input>
-            </div>
-
           </div>
         </div>
         <div class="button-container">
@@ -85,7 +79,6 @@
               <th>PNO.</th>
               <th>Arrival time</th>
               <th>Burst time</th>
-              <th>priority</th>
               <th>Waiting time</th>
               <th>Turn Around Time</th>
             </thead>
