--- a/CPU-scheduling/SRTF/srtf.html
+++ b/CPU-scheduling/SRTF/srtf.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="fcfs.css">
+    <link rel="stylesheet" href="srtf.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First In First Out</title>
+    <title>Shortest remaining time First</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="fcfs.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="srtf.js"></script>
 </head>
 <body>
-  <!-- Navbar -->
+<!-- Navbar -->
   <nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html"><strong>OS Simulator</strong></a>
@@ -32,10 +33,9 @@
       </div>
     </div>
   </nav>
-
     <div class="container">
         <h1 style="padding:40px;">
-          First Come First Serve
+          SHORTEST REMAINING TIME FIRST
         </h1>
         <div>
           <table id="ep" class="table table-bordered table-striped" style="width:70%" align="center">
@@ -66,6 +66,13 @@
         <br>
         <br>
   
+        <h2 id="gantt" style="display:none;">
+          Gantt Chart
+        </h2>
+        <div id="outer-div">
+        </div>
+        <br><br><br>
+  
         <div id="cardAdd">
           <table id="ptab" class="table table-bordered table-striped" style="width:70%;margin-top:20px; " align="center">
             <thead>
@@ -81,13 +88,6 @@
           </table>
           <div id="Average"></div>
         </div>
-
-        <h2 id="gantt" style="display:none;">
-          Gantt Chart
-        </h2>
-        <div id="outer-div">
-        </div>
-        <br><br><br>
       </div>
 
 </body>
