--- a/system_calls/syscall.html
+++ b/system_calls/syscall.html
@@ -23,7 +23,7 @@
 
   <nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><strong>OS Simulator</strong></a>
+      <a class="navbar-brand" href="../index.html">OS Simulator</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
