--- a/CPU-scheduling/scheduling.html
+++ b/CPU-scheduling/scheduling.html
@@ -20,7 +20,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../index.html">About</a>
+            <a class="nav-link active" href="#">About</a>
           </li>
         </ul>
       </div>
