--- a/file_allocation/indexed.html
+++ b/file_allocation/indexed.html
@@ -124,6 +124,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Color</th>
                 <th scope="col">Size</th>
+                <th scope="col">Index Block</th>
                 <th scope="col">Delete</th>
               </tr>
             </thead>
