--- a/file_allocation/linked.html
+++ b/file_allocation/linked.html
@@ -123,7 +123,7 @@
                 <th scope="col">Color</th>
                 <th scope="col">Starting Pointer</th>
                 <th scope="col">Size</th>
-                <th scope="col">Index Block</th>
+                <th scope="col">Linked List</th>
                 <th scope="col">Delete</th>
               </tr>
             </thead>
