--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-hdd"></i></div>
                         <h2 class="h4 fw-bolder">Disk Scheduling</h2>
                         <p>Disk scheduling is an operation performed by the operating system to manage incoming I/O requests for the disk. Given that the disk controller can only handle one I/O request at a time, it's crucial to have algorithms that can sequentially manage these requests. These algorithms aim to minimize the movement of the disk arm, as hard drives are mechanical and among the slowest components of a computer system.</p>
-                        <a class="text-decoration-none" href="#!">
+                        <a class="text-decoration-none" href="disk_scheduling/disk_scheduling.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
