--- a/file_allocation/linked.html
+++ b/file_allocation/linked.html
@@ -281,7 +281,10 @@
                 }
             })
             f1 = f1[0]
-            IndexBlock.innerHTML = `<h3>Linked List</h3><div style="display: flex; align-items: center;"><h4 style="margin-right: 10px;">Linked List for ${f1.name}</h4><button class="delete-button btn btn-primary mt-2" onclick="viewBlock('-1')">X</button></div>`;
+            IndexBlock.innerHTML = `<h3>Linked List</h3><div style="display: flex; align-items: center;">
+              <h4 style="margin-right: 10px;">Linked List for ${f1.name}</h4>
+              <button class="delete-button btn btn-primary mt-2" onclick="viewBlock('-1')">X</button>
+              </div>`;
             var p =f1.s
             for(var i=0;i<f1.l;i++){
                 var row = document.createElement("div");
