changed colour of about page

--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,7 @@
         <link href="../css/styles.css" rel="stylesheet" />
         <style>
             body{
-                background-color: #ADD8E6;
+                background-color:  #D5FFFF;
             }
         </style>
     </head>
@@ -36,15 +36,15 @@
   <h2>Team Members</h2>
   <ul>
     <li>Aahil Rafiq(221CS101)</li>
-    <li>Abhinaya(221CS102)</li>
+    <li>Abhinaya Siripurapu(221CS102)</li>
     <li>Adarsh Ranjan(221CS103)</li>
-    <li>Navaneet YVN(221CS104)</li>
+    <li>Adithya BM(221CS104)</li>
     <li>Adithya S Ubaradka(221CS105)</li>
     <li>Aditya G(221CS106)</li>
-    <li>Pratheek K S(221CS107)</li>
+    <li>Akshat Mishra(221CS107)</li>
     <li>Amruth S D P(221CS108)</li>
     <li>Aniket Maitra(221CS109)</li>
-    <li>Nischal Mayur(221CS110)</li>
+    <li>A. Yoga Anil Kumar(221CS110)</li>
   </ul>
   
   <h2>Project Description</h2>
