--- a/disk_scheduling/cscan.html
+++ b/disk_scheduling/cscan.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="../about/about.html">About</a>
