made final changes to disk scheduling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-arrow-repeat"></i></div>
                         <h2 class="h4 fw-bolder">Process Synchronization</h2>
                         <p>The Producer-Consumer Problem, also referred to as the bounded buffer problem, is a classic example of synchronization issues. It involves a buffer with N slots, each capable of holding a single unit of data. Two processes, namely the Producer and the Consumer, are concurrently operating within this buffer.</p>
@@ -94,13 +94,13 @@
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-view-stacked"></i></div>
                         <h2 class="h4 fw-bolder">Paging</h2>
                         <p>Paging is a memory management technique where data is transferred between a device's secondary and primary storage. This is a vital part of any computing device's operation, with paging playing a key role in the execution of virtual memory.</p>
-                        <a class="text-decoration-none" href="#!">
+                        <a class="text-decoration-none" href="paging/pages.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
