--- a/disk_scheduling/scan.html
+++ b/disk_scheduling/scan.html
@@ -37,17 +37,17 @@
   <!-- Navbar -->
   <nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html"><strong>OS Simulator</strong></a>
+      <a class="navbar-brand" href="disk_scheduling.html"><strong>OS Simulator</strong></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ms-auto me-4">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./about.html">About</a>
+            <a class="nav-link active" href="../about/about.html">About</a>
           </li>
         </ul>
       </div>
