fix: change in titles

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     
                     <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-view-stacked"></i></div>
-                        <h2 class="h4 fw-bolder">MVT and MFT</h2>
-                        <p>MFT and MVT are distinct methods of memory management utilized by operating systems. MFT, also known as the fixed partitioning scheme, involves partitioning the OS into fixed-sized blocks during installation. For instance, there could be four partitions in total, each with a size of 4KB.</p>
-                        <a class="text-decoration-none" href="mftmvt/mftmvt.html">
+                        <h2 class="h4 fw-bolder">Memory partitioning methods</h2>
+                        <p>Fixed and variable partitioning are distinct methods of memory management utilized by operating systems. The fixed partitioning scheme, involves partitioning the OS into fixed-sized blocks during installation. For instance, there could be four partitions in total, each with a size of 4KB.</p>
+                        <a class="text-decoration-none" href="./memory-part/mem.html">
                             Check it out
                             <i class="bi bi-arrow-right"></i>
                         </a>
