--- a/memory-part/mem.html
+++ b/memory-part/mem.html
@@ -63,12 +63,12 @@
     </nav>
 
     <div class="container">
-      <h1 class="text-center mb-5">MVT and MFT</h1>
+      <h1 class="text-center mb-5">Memory partitioning techniques</h1>
       <div class="row">
         <div class="col-md-6">
           <div class="simulator-box">
             <h2 class="simulator-title">
-              MFT(Multiprogramming with Fixed number of Tasks)
+              Fixed partitioning
             </h2>
             <p class="simulator-description">
               In this scheme, the primary
@@ -81,13 +81,13 @@
               security. Additionally, it mitigates external fragmentation as
               partition sizes remain constant.
             </p>
-            <a href="./mft.html" class="btn btn-primary">Simulate MFT</a>
+            <a href="./fixed.html" class="btn btn-primary">Simulate </a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="simulator-box">
             <h2 class="simulator-title">
-              MVT(Multiprogramming with Variable number of Tasks)
+              Variable partitioning
             </h2>
             <p class="simulator-description">
               In this scheme, the primary memory is segmented
@@ -101,7 +101,7 @@
               result in external fragmentation, as free memory blocks might be
               dispersed across the memory space.
             </p>
-            <a href="./mvt.html" class="btn btn-primary">Simulate MVT</a>
+            <a href="./variable.html" class="btn btn-primary">Simulate </a>
           </div>
         </div>
       </div>
