--- a/memory-part/variable.html
+++ b/memory-part/variable.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MVT Simulator</title>
+    <title>Variable Partitioning</title>
 
     <!-- 
       * Boostrap CSS library : https://getbootstrap.com/
@@ -73,7 +73,7 @@
           <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ms-auto me-4">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="mftmvt.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="./mem.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" onclick="location.href = '../about/about.html';" href="#">About</a>
@@ -85,7 +85,7 @@
 
     <div class="container">
       <h1 class="heading">
-        Multiprogramming with Variable Number of Tasks (MVT)
+        Variable Partitioning
       </h1>
 
       <div id="inputFormMemory">
