--- a/memory-part/fixed.html
+++ b/memory-part/fixed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MFT Simulator</title>
+    <title>Fixed Partitioning</title>
 
     <!-- 
       * Boostrap CSS library : https://getbootstrap.com/
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto me-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="mftmvt.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./mem.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" onclick="location.href = '../about/about.html';" href="#">About</a>
@@ -62,7 +62,7 @@
 
 
     <div class="container">
-      <h1 class="heading">Multiprogramming with fixed Tasks</h1>
+      <h1 class="heading">Fixed Partitioning</h1>
       <div id="inputForm">
         <div class="form-group mt-4">
           <label for="totalMemorySize">Total Size of Memory:</label>
